--- a/about-us.htm
+++ b/about-us.htm
@@ -44,8 +44,7 @@
     <!-- Custom styles for this template -->
     <link href="/assets/website/css/hysteria2github/style.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/website/css/G.css" />
-    
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TR6185Y0WC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -138,6 +137,8 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/free-nodes/2025-7-9-clash-verge-rev-windows.htm" title="安卓机场 | 7月9日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，V2rayC梯子购买推荐">安卓机场 | 7月9日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，V2rayC梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-11-clash-verge-rev-github.htm" title="安卓机场 | 7月11日21M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，安卓机场梯子购买推荐">安卓机场 | 7月11日21M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，安卓机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-10-node-share.htm" title="安卓机场 | 7月10日18M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，安卓机场梯子购买推荐">安卓机场 | 7月10日18M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，安卓机场梯子购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -149,7 +150,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                     </ul>
     </div>
