--- a/free-nodes/2025-7-9-clash-verge-rev-windows.htm
+++ b/free-nodes/2025-7-9-clash-verge-rev-windows.htm
@@ -46,8 +46,7 @@
     <!-- Custom styles for this template -->
     <link href="/assets/website/css/hysteria2github/style.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/website/css/G.css" />
-    
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TR6185Y0WC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -148,6 +147,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><p>&nbsp;</p><p></p><h2>订阅文件链接</h2><p>&nbsp;</p><p><strong>Clash订阅链接</strong></p><p>https://androidjichang.github.io/uploads/2025/07/1-20250709.yaml</p><p>https://androidjichang.github.io/uploads/2025/07/2-20250709.yaml</p><p>https://androidjichang.github.io/uploads/2025/07/3-20250709.yaml</p><p>&nbsp;</p><p><strong>V2ray订阅链接:</strong></p><p>https://androidjichang.github.io/uploads/2025/07/1-20250709.txt</p><p>https://androidjichang.github.io/uploads/2025/07/2-20250709.txt</p><p><strong>Sing-Box订阅链接</strong></p><p>https://androidjichang.github.io/uploads/2025/07/20250709.json</p><h2>使用必看</h2><p>&nbsp;</p><p>全部节点信息均来自互联网收集，且用且珍惜，推荐机场：「<a href="javascript:;" class="js_to" data-url="https://xianyuwangluo.top/#/register?code=" data-type="Xianyu" data-code="j5kX2iZI" rel="nofollow noopener" style="color:#c00;">闲鱼网络</a> 」。仅针对用于学习研究的用户分享，请勿随意传播其他信息。免费节点有效时间比较短，遇到失效是正常现象。</p>                </div>
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
+                                        <p>下一个：<a href="/free-nodes/2025-7-10-node-share.htm">安卓机场 | 7月10日18M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，安卓机场梯子购买推荐</a></p>
                                     </div>
                                 </div>
                 <div class="col-md-3">
@@ -157,6 +157,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-7-10-node-share.htm" title="安卓机场 | 7月10日18M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，安卓机场梯子购买推荐">安卓机场 | 7月10日18M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，安卓机场梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-11-clash-verge-rev-github.htm" title="安卓机场 | 7月11日21M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，安卓机场梯子购买推荐">安卓机场 | 7月11日21M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，安卓机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-9-clash-verge-rev-windows.htm" title="安卓机场 | 7月9日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，V2rayC梯子购买推荐">安卓机场 | 7月9日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，V2rayC梯子购买推荐</a></li>
                     </ul>
     </div>
@@ -169,7 +171,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                     </ul>
     </div>
