--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -41,8 +41,7 @@
     <!-- Custom styles for this template -->
     <link href="/assets/website/css/hysteria2github/style.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/website/css/G.css" />
-    
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TR6185Y0WC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -118,6 +117,42 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-07-11">
+                            <div class="col-md-3">
+                                <div class="sec-image position-relative " id="sec-image">
+                                    <div class="bg-img overflow-hidden border-radius">
+                                        <a href="/free-nodes/2025-7-11-clash-verge-rev-github.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240913/41089b03cf7c009b744692efeb14e18a.webp" alt="安卓机场 | 7月11日21M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，安卓机场梯子购买推荐" class="img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-7-11-clash-verge-rev-github.htm" class="xcblog-blog-url">
+                                    <h3 class="fw-bold mt-2">安卓机场 | 7月11日21M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，安卓机场梯子购买推荐</h3>
+                                </a>
+                                <p class="mt-3">
+                                    这一次的节点更新覆盖了美国、韩国、新加坡、香港、日本、欧洲、加拿大等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-07-10">
+                            <div class="col-md-3">
+                                <div class="sec-image position-relative " id="sec-image">
+                                    <div class="bg-img overflow-hidden border-radius">
+                                        <a href="/free-nodes/2025-7-10-node-share.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240913/a2f71a46527dc2315997af2cdfd5e976.webp" alt="安卓机场 | 7月10日18M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，安卓机场梯子购买推荐" class="img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-7-10-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="fw-bold mt-2">安卓机场 | 7月10日18M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，安卓机场梯子购买推荐</h3>
+                                </a>
+                                <p class="mt-3">
+                                    这一次的节点更新覆盖了美国、香港、新加坡、日本、韩国、欧洲、加拿大等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-07-09">
                             <div class="col-md-3">
                                 <div class="sec-image position-relative " id="sec-image">
@@ -146,7 +181,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-7-10-node-share.htm" title="安卓机场 | 7月10日18M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，安卓机场梯子购买推荐">安卓机场 | 7月10日18M/S|免费Shadowrocket/SSR/V2ray/Clash节点推荐，安卓机场梯子购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-9-clash-verge-rev-windows.htm" title="安卓机场 | 7月9日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，V2rayC梯子购买推荐">安卓机场 | 7月9日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，V2rayC梯子购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-11-clash-verge-rev-github.htm" title="安卓机场 | 7月11日21M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，安卓机场梯子购买推荐">安卓机场 | 7月11日21M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，安卓机场梯子购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -158,7 +195,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                     </ul>
     </div>
